fix: missing padding in popover title

--- a/app/theme/client/imports/components/popover.css
+++ b/app/theme/client/imports/components/popover.css
@@ -82,6 +82,8 @@
 
 		margin-bottom: 8px;
 
+		padding: 0 12px;
+
 		text-transform: uppercase;
 
 		color: var(--popover-title-color);
